--- a/app/views/pul_store/lae/folders/_pages_list.html.erb
+++ b/app/views/pul_store/lae/folders/_pages_list.html.erb
@@ -3,9 +3,7 @@
   osd_config = {
     crossOriginPolicy: true,
     preserveViewport: true, 
-    visibilityRatio: 1,
-    showNavigator:  true
-  }
+    visibilityRatio: 1
 %>
 <% unless @pages_list.blank? %>
   <h2><%= pluralize(@pages_list.size, 'Images') %></h2>
